<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40sp"
    android:paddingHorizontal="40sp"
    android:paddingBottom="@dimen/in_sp"
    tools:context=".educationmanager.ManagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/btn_list_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/in_sp"
            android:layout_marginBottom="15dp"
            android:text="@string/display"
            android:onClick="btn_display"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/in_sp"
            android:layout_marginBottom="15dp"
            android:text="@string/recycle_view"
            android:id="@+id/btn_generate"
            android:onClick="btn_recycle_view"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/in_sp"
            android:layout_marginBottom="15dp"
            android:text="@string/card_view"
            android:id="@+id/btn_generate_from_json"
            android:onClick="btn_manager"
            tools:ignore="OnClick" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/in_sp"
            android:layout_marginBottom="15dp"
            android:text="@string/fragments"
            android:id="@+id/btn_generate_from_sql"
            android:onClick="btn_manager"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgs_btn_back_1"
            android:text="@string/back"
            android:paddingHorizontal="60dp"
            android:paddingVertical="10dp"
            android:layout_centerHorizontal="true"
            android:onClick="btn_back"
            android:textSize="22sp"
            />


    </RelativeLayout>


</RelativeLayout>