<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:layout_width="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40sp"
        android:textAlignment="center">
        <View
            android:id="@+id/anchor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />
        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_your_choice"
            android:textSize="40sp"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:layout_marginTop="80sp"
            />
        <Button
            android:layout_alignParentBottom = "true"
            android:layout_width="match_parent"
            android:layout_toStartOf="@id/anchor"
            android:layout_height="65sp"
            android:textSize="@dimen/in_sp"
            android:text="@string/register"
            android:layout_alignParentStart="true"
            android:onClick="btn_student"
            />

        <Button
            android:layout_alignParentBottom = "true"
            android:layout_width="wrap_content"
            android:layout_toEndOf="@id/anchor"
            android:layout_height="65sp"
            android:textSize="@dimen/in_sp"
            android:text="@string/manager"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap"
            android:onClick="btn_manager"/>
    </RelativeLayout>
</LinearLayout>